# Hello_There

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  registry_pattern_update.md  requirements.txt  sonar-project.properties  tailwind.config.js  watch-css.bat
.github/workflows/: build-and-deploy.yml  build.yml
app/: __init__.py  app.py
app/applications/: __init__.py  alarm.py  color_converter.py  dice_roller.py  distance_converter.py  qr_gen.py  temperature.py  to_ico_converter.py
app/content/: homepage.py
app/pages/: __init__.py  games.py  games_page.py  testing.py  testing_page.py
app/static/css/: input.css  output.css
runner/: Dockerfile  docker-compose.runner.yml  entrypoint.sh
