[tool.poetry]
name = "hello-there"
version = "0.2.0"
description = "Portfolio Page"
authors = ["EvenMoreDMG"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
python-fasthtml = "0.12.29"
sqlite-minutils = "^4.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.app:main"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
